--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           filename: achievements.svg
-          token: ${{ secrets.PROFILE_METRIC }}
+          token: ${{ secrets.METRIC_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
           user: ellisonleao
           base: achievements
@@ -29,7 +29,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           filename: header.svg
-          token: ${{ secrets.PROFILE_METRIC }}
+          token: ${{ secrets.METRIC_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
           user: Isaac7777-cpu
           template: classic
@@ -41,7 +41,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           filename: lines-of-code.svg
-          token: ${{ secrets.PROFILE_METRIC }}
+          token: ${{ secrets.METRIC_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
           base: "repositories"
           plugin_lines: yes
@@ -52,7 +52,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           filename: acti_comm.svg
-          token: ${{ secrets.PROFILE_METRIC }}
+          token: ${{ secrets.METRIC_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
           user: Isaac7777-cpu
           template: classic
@@ -65,7 +65,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           filename: iso_calender.svg
-          token: ${{ secrets.PROFILE_METRIC }}
+          token: ${{ secrets.METRIC_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
           user: Isaac7777-cpu
           template: classic
@@ -80,7 +80,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           filename: issue_pr_lang.svg
-          token: ${{ secrets.PROFILE_METRIC }}
+          token: ${{ secrets.METRIC_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
           user: Isaac7777-cpu
           template: classic
@@ -96,7 +96,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           filename: repositories.svg
-          token: ${{ secrets.PROFILE_METRIC }}
+          token: ${{ secrets.METRIC_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
           user: Isaac7777-cpu
           template: classic
