--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -9,6 +9,10 @@ jobs:
 
   achievements:
     runs-on: ubuntu-latest
+    environment:
+      name: PROFILE
+    permissions:
+      contents:  write
     steps:
       - uses: lowlighter/metrics@latest
         with:
@@ -25,6 +29,10 @@ jobs:
 
   github-metrics:
     runs-on: ubuntu-latest
+    environment:
+      name: PROFILE
+    permissions:
+      contents:  write
     steps:
       - uses: lowlighter/metrics@latest
         with:
@@ -37,6 +45,10 @@ jobs:
           config_timezone: Australia/Sydney
   lines:
     runs-on: ubuntu-latest
+    environment:
+      name: PROFILE
+    permissions:
+      contents:  write
     steps:
       - uses: lowlighter/metrics@latest
         with:
@@ -48,6 +60,10 @@ jobs:
 
   acti_comm:
     runs-on: ubuntu-latest
+    environment:
+      name: PROFILE
+    permissions:
+      contents:  write
     steps:
       - uses: lowlighter/metrics@latest
         with:
@@ -61,6 +77,10 @@ jobs:
 
   iso_calender:
     runs-on: ubuntu-latest
+    environment:
+      name: PROFILE
+    permissions:
+      contents:  write
     steps:
       - uses: lowlighter/metrics@latest
         with:
@@ -76,6 +96,10 @@ jobs:
 
   issue_pr_lang:
     runs-on: ubuntu-latest
+    environment:
+      name: PROFILE
+    permissions:
+      contents:  write
     steps:
       - uses: lowlighter/metrics@latest
         with:
@@ -92,6 +116,10 @@ jobs:
 
   repositories:
     runs-on: ubuntu-latest
+    environment:
+      name: PROFILE
+    permissions:
+      contents:  write
     steps:
       - uses: lowlighter/metrics@latest
         with:
